backend-deployment.yaml

# Define 'Service' to expose backend application deployment
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam  
spec:
  selector:  # backend application pod lables should match these
    app: exam-app
    tier: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort   # use NodePort, if you are not running Kubernetes on cloud
---
# Configure 'Deployment' of backend application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
  namespace: exam
  labels: 
    app: exam-app
    tier: backend
spec:
  replicas: 2    # Number of replicas of back-end application to be deployed
  selector:
    matchLabels: # backend application pod labels should match these
      app: exam-app
      tier: backend
  template:
    metadata:
      labels: # Must macth 'Service' and 'Deployment' labels
        app: exam-app
        tier: backend  
    spec:                 
      containers: 
      - name: backend
        image: omaima2024/mini-projet:remote-backend-image
        env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: mongo-db-conf # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: mongo-db-conf
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: mongo-db-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: mongo-db-credentials
                key: password     
        ports:
        - containerPort: 5000
